--- a/ibobeyblog/src/assets/_less/leftLayer.less
+++ b/ibobeyblog/src/assets/_less/leftLayer.less
@@ -1,4 +1,4 @@
 ﻿@charset "utf-8";
 @import "mixin.less";
 
-.leftLayer{width:300px; height: 100vh;display:flex; .fixed; top:0; left: 0;}
+.leftLayer{width:300px; height: 100vh;display:flex; .fixed; top:0; left: 0; background-color: bisque; }
